# qcocr

./: Cargo.toml  README.md
examples/: recognize_from_bytes.rs  recognize_from_file.rs
src/: lib.rs
