[package]
name = "qcocr"
version = "0.1.0"
edition = "2021"
authors = ["MoSheng"]
description = "Windows OCR API wrapper for Rust"

[lib]
crate-type = ["rlib"]

[dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Win32_System_WinRT"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
